[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/parallax.gd" type="Script" id=2]
[ext_resource path="res://Sprites/backgrounds.png" type="Texture" id=3]
[ext_resource path="res://Scripts/spawn_pipes.gd" type="Script" id=4]
[ext_resource path="res://Sprites/middleground4.png" type="Texture" id=5]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Samples/super_mario_medley.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 130.667, 22 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/SuperMario256.ttf"

[sub_resource type="DynamicFont" id=3]
size = 52
outline_size = 5
font_data = SubResource( 2 )

[sub_resource type="GDScript" id=4]
script/source = "extends Label


func _ready():
	game.connect(\"changeScore\", self, \"_on_changeScore\")

func _on_changeScore():
	text = str(game.score)
	"

[node name="game" type="Node"]
script = ExtResource( 1 )

[node name="parallax" type="ParallaxBackground" parent="."]
editor/display_folded = true
layer = -2
script = ExtResource( 2 )
speed = 110

[node name="layer" type="ParallaxLayer" parent="parallax"]
motion_mirroring = Vector2( 760, 0 )

[node name="backgrond" type="Sprite" parent="parallax/layer"]
position = Vector2( 0, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 437, 509, 431 )

[node name="spawn_pipes" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="timer" type="Timer" parent="spawn_pipes"]
wait_time = 1.5
autostart = true

[node name="parallax_ground" type="ParallaxBackground" parent="."]
editor/display_folded = true
script = ExtResource( 2 )
speed = 250

[node name="layer" type="ParallaxLayer" parent="parallax_ground"]
motion_mirroring = Vector2( 430, 0 )

[node name="ground" type="Sprite" parent="parallax_ground/layer"]
position = Vector2( 94, 608 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="ground2" type="Sprite" parent="parallax_ground/layer"]
position = Vector2( 310, 608 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="limits" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 94, 608 )
scale = Vector2( 1.5, 1.5 )

[node name="shape" type="CollisionShape2D" parent="limits"]
position = Vector2( 52, 0.666656 )
shape = SubResource( 1 )

[node name="limits_top" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 99, -37 )
scale = Vector2( 1.5, 1.5 )

[node name="shape" type="CollisionShape2D" parent="limits_top"]
position = Vector2( 52, 0.666656 )
shape = SubResource( 1 )

[node name="player" parent="." instance=ExtResource( 6 )]
position = Vector2( 71, 556 )
collision_mask = 3

[node name="GUI" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="GUI_base" type="Control" parent="GUI"]
margin_right = 360.0
margin_bottom = 70.0

[node name="boxH" type="HBoxContainer" parent="GUI/GUI_base"]
margin_top = 10.0
margin_right = 360.0
margin_bottom = 60.0
alignment = 1

[node name="pontos" type="Label" parent="GUI/GUI_base/boxH"]
margin_left = 165.0
margin_right = 194.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
script = SubResource( 4 )

[node name="musica_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="timeout" from="spawn_pipes/timer" to="spawn_pipes" method="_on_timer_timeout"]
[connection signal="hit" from="player" to="." method="game_over"]
